Fixed alignment issues

--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -41,7 +41,6 @@ p{
 #cart-icon{
 	width:35px;
 	display: inline-block;
-	margin-left: 15px;
 }
 
 #cart-total{
